--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/texlive"]
-    path = src/texlive
-    url  = https://github.com/texlive/texlive-source.git
+[submodule "src/texlive-source"]
+	path = src/texlive-source
+	url = https://github.com/texlive/texlive-source.git
