updated .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,178 @@
 *.a
 *.la
 *.so
+src/texlive-upstream/texk/dvipos/dvipos
+src/texlive-upstream/texk/tex4htk/tex4ht
+src/texlive-upstream/texk/tex4htk/t4ht
+src/texlive-upstream/texk/gregorio/gregorio
+src/texlive-upstream/texk/web2c/vptovf
+src/texlive-upstream/texk/web2c/tex
+src/texlive-upstream/texk/web2c/mflua
+src/texlive-upstream/texk/web2c/pktype
+src/texlive-upstream/texk/web2c/wofm2opl
+src/texlive-upstream/texk/web2c/upbibtex
+src/texlive-upstream/texk/web2c/tangle
+src/texlive-upstream/texk/web2c/ptex
+src/texlive-upstream/texk/web2c/ttf2afm
+src/texlive-upstream/texk/web2c/vftovp
+src/texlive-upstream/texk/web2c/odvicopy
+src/texlive-upstream/texk/web2c/upmpost
+src/texlive-upstream/texk/web2c/odvitype
+src/texlive-upstream/texk/web2c/mft
+src/texlive-upstream/texk/web2c/pmpost
+src/texlive-upstream/texk/web2c/tftopl
+src/texlive-upstream/texk/web2c/luatex
+src/texlive-upstream/texk/web2c/wovf2ovp
+src/texlive-upstream/texk/web2c/cweave
+src/texlive-upstream/texk/web2c/ctangleboot
+src/texlive-upstream/texk/web2c/bibtex
+src/texlive-upstream/texk/web2c/euptex
+src/texlive-upstream/texk/web2c/ctie
+src/texlive-upstream/texk/web2c/dvitype
+src/texlive-upstream/texk/web2c/uppltotf
+src/texlive-upstream/texk/web2c/pdvitype
+src/texlive-upstream/texk/web2c/eptex
+src/texlive-upstream/texk/web2c/ppltotf
+src/texlive-upstream/texk/web2c/ctangle
+src/texlive-upstream/texk/web2c/ptftopl
+src/texlive-upstream/texk/web2c/wopl2ofm
+src/texlive-upstream/texk/web2c/pltotf
+src/texlive-upstream/texk/web2c/tie
+src/texlive-upstream/texk/web2c/tangleboot
+src/texlive-upstream/texk/web2c/pktogf
+src/texlive-upstream/texk/web2c/uptex
+src/texlive-upstream/texk/web2c/otangle
+src/texlive-upstream/texk/web2c/gftype
+src/texlive-upstream/texk/web2c/pdftosrc
+src/texlive-upstream/texk/web2c/uptftopl
+src/texlive-upstream/texk/web2c/updvitype
+src/texlive-upstream/texk/web2c/mpost
+src/texlive-upstream/texk/web2c/mfluajit
+src/texlive-upstream/texk/web2c/mf-nowin
+src/texlive-upstream/texk/web2c/pbibtex
+src/texlive-upstream/texk/web2c/patgen
+src/texlive-upstream/texk/web2c/gftodvi
+src/texlive-upstream/texk/web2c/gftopk
+src/texlive-upstream/texk/web2c/dvicopy
+src/texlive-upstream/texk/web2c/pdftex
+src/texlive-upstream/texk/web2c/mf
+src/texlive-upstream/texk/web2c/wovp2ovf
+src/texlive-upstream/texk/web2c/synctex
+src/texlive-upstream/texk/web2c/xetex
+src/texlive-upstream/texk/web2c/aleph
+src/texlive-upstream/texk/web2c/luajittex
+src/texlive-upstream/texk/web2c/weave
+src/texlive-upstream/texk/web2c/pooltype
+src/texlive-upstream/texk/web2c/omegafonts/omfonts
+src/texlive-upstream/texk/web2c/web2c/web2c
+src/texlive-upstream/texk/web2c/web2c/fixwrites
+src/texlive-upstream/texk/web2c/web2c/splitup
+src/texlive-upstream/texk/web2c/web2c/makecpool
+src/texlive-upstream/texk/web2c/otps/outocp
+src/texlive-upstream/texk/web2c/otps/otp2ocp
+src/texlive-upstream/texk/gsftopk/gsftopk
+src/texlive-upstream/texk/cjkutils/bg5conv
+src/texlive-upstream/texk/cjkutils/cefsconv
+src/texlive-upstream/texk/cjkutils/extconv
+src/texlive-upstream/texk/cjkutils/cef5conv
+src/texlive-upstream/texk/cjkutils/sjisconv
+src/texlive-upstream/texk/cjkutils/hbf2gf
+src/texlive-upstream/texk/cjkutils/cefconv
+src/texlive-upstream/texk/psutils/psresize
+src/texlive-upstream/texk/psutils/psselect
+src/texlive-upstream/texk/psutils/pstops
+src/texlive-upstream/texk/psutils/psbook
+src/texlive-upstream/texk/psutils/psnup
+src/texlive-upstream/texk/psutils/epsffit
+src/texlive-upstream/texk/musixtnt/msxlint
+src/texlive-upstream/texk/dvi2tty/dvi2tty
+src/texlive-upstream/texk/dvi2tty/disdvi
+src/texlive-upstream/texk/xdvik/xdvi-bin
+src/texlive-upstream/texk/xdvik/squeeze/squeeze
+src/texlive-upstream/texk/dvipsk/afm2tfm
+src/texlive-upstream/texk/dvipsk/dvips
+src/texlive-upstream/texk/dvipsk/squeeze/squeeze
+src/texlive-upstream/texk/detex/detex
+src/texlive-upstream/texk/ps2pk/pktest
+src/texlive-upstream/texk/ps2pk/mag
+src/texlive-upstream/texk/ps2pk/ps2pk
+src/texlive-upstream/texk/ps2pk/pfb2pfa
+src/texlive-upstream/texk/ps2pk/pk2bm
+src/texlive-upstream/texk/ttf2pk2/ttf2tfm
+src/texlive-upstream/texk/ttf2pk2/ttf2pk
+src/texlive-upstream/texk/dtl/dv2dt
+src/texlive-upstream/texk/dtl/dt2dv
+src/texlive-upstream/texk/dvipdfm-x/xdvipdfmx
+src/texlive-upstream/texk/makejvf/makejvf
+src/texlive-upstream/texk/afm2pl/afm2pl
+src/texlive-upstream/texk/ttfdump/ttfdump
+src/texlive-upstream/texk/seetexk/dvitodvi
+src/texlive-upstream/texk/seetexk/dviconcat
+src/texlive-upstream/texk/seetexk/dvibook
+src/texlive-upstream/texk/seetexk/dviselect
+src/texlive-upstream/texk/dviljk/dvilj4l
+src/texlive-upstream/texk/dviljk/dvilj4
+src/texlive-upstream/texk/dviljk/dvilj
+src/texlive-upstream/texk/dviljk/dvilj2p
+src/texlive-upstream/texk/chktex/chktex
+src/texlive-upstream/texk/mendexk/mendex
+src/texlive-upstream/texk/makeindexk/makeindex
+src/texlive-upstream/texk/bibtex-x/bibtexu
+src/texlive-upstream/texk/bibtex-x/bibtex8
+src/texlive-upstream/texk/dvisvgm/dvisvgm
+src/texlive-upstream/texk/upmendex/upmendex
+src/texlive-upstream/texk/kpathsea/kpseaccess
+src/texlive-upstream/texk/kpathsea/kpsewhich
+src/texlive-upstream/texk/kpathsea/kpsestat
+src/texlive-upstream/texk/kpathsea/kpsereadlink
+src/texlive-upstream/texk/dvipng/dvipng
+src/texlive-upstream/texk/dvidvi/dvidvi
+src/texlive-upstream/texk/lcdf-typetools/lcdf-typetools-src/cfftot1/cfftot1
+src/texlive-upstream/texk/lcdf-typetools/lcdf-typetools-src/mmafm/mmafm
+src/texlive-upstream/texk/lcdf-typetools/lcdf-typetools-src/t1testpage/t1testpage
+src/texlive-upstream/texk/lcdf-typetools/lcdf-typetools-src/t1dotlessj/t1dotlessj
+src/texlive-upstream/texk/lcdf-typetools/lcdf-typetools-src/mmpfb/mmpfb
+src/texlive-upstream/texk/lcdf-typetools/lcdf-typetools-src/t1reencode/t1reencode
+src/texlive-upstream/texk/lcdf-typetools/lcdf-typetools-src/otfinfo/otfinfo
+src/texlive-upstream/texk/lcdf-typetools/lcdf-typetools-src/otftotfm/otftotfm
+src/texlive-upstream/texk/lcdf-typetools/lcdf-typetools-src/t1rawafm/t1rawafm
+src/texlive-upstream/texk/lcdf-typetools/lcdf-typetools-src/t1lint/t1lint
+src/texlive-upstream/texk/lcdf-typetools/lcdf-typetools-src/ttftotype42/ttftotype42
+src/texlive-upstream/libs/gmp/native/gen-fac
+src/texlive-upstream/libs/gmp/native/gen-fib
+src/texlive-upstream/libs/gmp/native/gen-bases
+src/texlive-upstream/libs/luajit/native/minilua
+src/texlive-upstream/libs/luajit/native/buildvm
+src/texlive-upstream/libs/freetype2/ft-build/apinames
+src/texlive-upstream/libs/teckit/teckit_compile
+src/texlive-upstream/libs/icu/icu-build/bin/gennorm2
+src/texlive-upstream/libs/icu/icu-build/bin/icupkg
+src/texlive-upstream/libs/icu/icu-build/bin/makeconv
+src/texlive-upstream/libs/icu/icu-build/bin/gencnval
+src/texlive-upstream/libs/icu/icu-build/bin/gencmn
+src/texlive-upstream/libs/icu/icu-build/bin/derb
+src/texlive-upstream/libs/icu/icu-build/bin/gensprep
+src/texlive-upstream/libs/icu/icu-build/bin/pkgdata
+src/texlive-upstream/libs/icu/icu-build/bin/gencfu
+src/texlive-upstream/libs/icu/icu-build/bin/genrb
+src/texlive-upstream/libs/icu/icu-build/bin/genccode
+src/texlive-upstream/libs/icu/icu-build/bin/gendict
+src/texlive-upstream/libs/icu/icu-build/bin/genbrk
+src/texlive-upstream/libs/icu/icu-build/tools/icuinfo/icuinfo
+src/texlive-upstream/libs/icu/icu-build/tools/gentest/gentest
+src/texlive-upstream/utils/vlna/vlna
+src/texlive-upstream/utils/ps2eps/bbox
+src/texlive-upstream/utils/devnag/devnag
+src/texlive-upstream/utils/pmx/pmxab
+src/texlive-upstream/utils/pmx/scor2prt
+src/texlive-upstream/utils/t1utils/t1disasm
+src/texlive-upstream/utils/t1utils/t1binary
+src/texlive-upstream/utils/t1utils/t1mac
+src/texlive-upstream/utils/t1utils/t1unmac
+src/texlive-upstream/utils/t1utils/t1asm
+src/texlive-upstream/utils/t1utils/t1ascii
+src/texlive-upstream/utils/lacheck/lacheck
+src/texlive-upstream/utils/autosp/autosp
+src/texlive-upstream/utils/xpdfopen/pdfopen
+src/texlive-upstream/utils/xpdfopen/pdfclose
+src/texlive-upstream/utils/m-tx/prepmx
