imported xz and xzdec.

--- a/.gitignore
+++ b/.gitignore
@@ -186,3 +186,43 @@ src/expat-2.2.0/.libs/libexpat.lai
 src/expat-2.2.0/.libs/libexpat.so.1
 src/expat-2.2.0/.libs/libexpat.so.1.6.2
 src/expat-2.2.0/xmlwf/.libs/xmlwf
+src/xz-5.2.2/Doxyfile
+src/xz-5.2.2/Makefile
+src/xz-5.2.2/config.log
+src/xz-5.2.2/config.status
+src/xz-5.2.2/debug/.deps/
+src/xz-5.2.2/debug/Makefile
+src/xz-5.2.2/lib/.deps/
+src/xz-5.2.2/lib/Makefile
+src/xz-5.2.2/libtool
+src/xz-5.2.2/po/Makefile
+src/xz-5.2.2/po/Makefile.in
+src/xz-5.2.2/po/POTFILES
+src/xz-5.2.2/src/Makefile
+src/xz-5.2.2/src/liblzma/.deps/
+src/xz-5.2.2/src/liblzma/.libs/
+src/xz-5.2.2/src/liblzma/Makefile
+src/xz-5.2.2/src/liblzma/api/Makefile
+src/xz-5.2.2/src/liblzma/liblzma.pc
+src/xz-5.2.2/src/lzmainfo/.deps/
+src/xz-5.2.2/src/lzmainfo/.libs/
+src/xz-5.2.2/src/lzmainfo/Makefile
+src/xz-5.2.2/src/lzmainfo/lzmainfo
+src/xz-5.2.2/src/scripts/Makefile
+src/xz-5.2.2/src/scripts/xzdiff
+src/xz-5.2.2/src/scripts/xzgrep
+src/xz-5.2.2/src/scripts/xzless
+src/xz-5.2.2/src/scripts/xzmore
+src/xz-5.2.2/src/xz/.deps/
+src/xz-5.2.2/src/xz/.libs/
+src/xz-5.2.2/src/xz/Makefile
+src/xz-5.2.2/src/xz/xz
+src/xz-5.2.2/src/xzdec/.deps/
+src/xz-5.2.2/src/xzdec/.libs/
+src/xz-5.2.2/src/xzdec/Makefile
+src/xz-5.2.2/src/xzdec/lzmadec
+src/xz-5.2.2/src/xzdec/xzdec
+src/xz-5.2.2/stamp-h1
+src/xz-5.2.2/tests/.deps/
+src/xz-5.2.2/tests/Makefile
+
